csdl/examples/invalid/ex_connections_connecting_vars_in_models.py
def example(Simulator):
    from csdl import Model, GraphRepresentation
    import csdl
    import numpy as np
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from connection_error import ConnectWithin
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.false_cycle import FalseCyclePost
    from csdl.examples.models.addition import AdditionFunction
    
    
    class ErrorConnectingVarsInModels(Model):
        # Cannot make connections within models
        # return error
    
        def define(self):
            # NOTE: Importing definitions within a method is bad practice.
            # This is only done here to automate example/test case
            # generation more easily.
            # When defining CSDL models, please put the import statements at
            # the top of your Python file(s).
            from connection_error import ConnectWithin
    
            self.add(ConnectWithin(
            ))  # Adding a connection within a model will throw an error
    
    
    rep = GraphRepresentation(ErrorConnectingVarsInModels())
    sim = Simulator(rep)
    sim.run()
    